--- a/eventDetection/log4j.properties
+++ b/eventDetection/log4j.properties
@@ -1,10 +1,10 @@
 
 #All attributes details
-handlers=java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.level=FINEST
-java.util.logging.SimpleFormatter.format=%4$-7s [%3$s] %5$s%6$s%n
+#handlers=java.util.logging.ConsoleHandler
+#java.util.logging.ConsoleHandler.level=FINEST
+#java.util.logging.SimpleFormatter.format=%4$-7s [%3$s] %5$s%6$s%n
 
 #All log level details
-.level=INFO
-org.glassfish.jersey.level=CONFIG
-org.glassfish.jersey.tracing.level=FINEST
+#.level=INFO
+#org.glassfish.jersey.level=CONFIG
+#org.glassfish.jersey.tracing.level=FINEST
