--- a/eventDetection/pom.xml
+++ b/eventDetection/pom.xml
@@ -98,16 +98,16 @@
 			<artifactId>jersey-container-servlet-core</artifactId>
 			<version>2.22.1</version>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
 			<version>2.22.1</version>
-		</dependency>
-		<dependency>
+		</dependency -->
+		<!-- dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-metainf-services</artifactId>
 			<version>2.22.2</version>
-		</dependency>
+		</dependency -->
 							<!-- LUCENE -->
 		<!-- dependency>
 			<groupId>org.apache.lucene</groupId>
@@ -173,13 +173,11 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.3</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.bedatadriven</groupId>
 			<artifactId>jackson-datatype-jts</artifactId>
