--- a/eventDetection/pom.xml
+++ b/eventDetection/pom.xml
@@ -16,14 +16,6 @@
 			<name>Strabon - maven repository</name>
 			<url>http://maven.strabon.di.uoa.gr/content/repositories/releases</url>
 		</repository>
-		<repository>
-			<id>GeoTriples-mvn-repo</id>
-			<url>https://raw.github.com/LinkedEOData/GeoTriples/mvn-repo-snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
-		</repository>
 	</repositories>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -53,25 +45,6 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<dependency>
-			<groupId>eu.linkedeodata</groupId>
-			<artifactId>geotriples</artifactId>
-			<version>1.1.6-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>httpcore</artifactId>
-					<groupId>org.apache.httpcomponents</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>httpclient</artifactId>
-					<groupId>org.apache.httpcomponents</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>gt-referencing</artifactId>
-					<groupId>org.geotools</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 						<!-- GLASSFISH -->		
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
@@ -98,37 +71,12 @@
 			<artifactId>jersey-container-servlet-core</artifactId>
 			<version>2.22.1</version>
 		</dependency>
-		<!-- dependency>
-			<groupId>org.glassfish.jersey.containers</groupId>
-			<artifactId>jersey-container-servlet</artifactId>
-			<version>2.22.1</version>
-		</dependency -->
-		<!-- dependency>
-			<groupId>org.glassfish.jersey.ext</groupId>
-			<artifactId>jersey-metainf-services</artifactId>
-			<version>2.22.2</version>
-		</dependency -->
-							<!-- LUCENE -->
-		<!-- dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>5.4.1</version>
-		</dependency> -->
-		<!-- dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers-common</artifactId>
-			<version>5.4.1</version>
-		</dependency> -->
+		
 		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-queryparser</artifactId>
-			<version>5.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-suggest</artifactId>
-			<version>5.4.1</version>
-		</dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.0.1</version>
+	</dependency> 
 						<!-- JACKSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -149,24 +97,13 @@
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>2.5.4</version>
-		</dependency>
+		</dependency> 
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-joda</artifactId>
-			<version>2.7.1</version>
+			<version>2.7.1</version> 
 		</dependency>
-						<!-- SUN.XML.BIND -->
-		<!-- dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.2.11</version>
-		</dependency> -->
 		
-		<!-- dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.2.11</version>
-		</dependency> -->
 						<!-- SEVERAL -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -176,7 +113,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5</version>
+			<version>4.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.bedatadriven</groupId>
@@ -190,42 +127,6 @@
 			<version>3.3.1</version>
 			<scope>compile</scope>
 		</dependency>
-
-		<!-- dependency>
-			<groupId>com.opencsv</groupId>
-			<artifactId>opencsv</artifactId>
-			<version>3.4</version>
-		</dependency> -->
-
-		<!-- dependency>
-			<groupId>org.apache.xmlbeans</groupId>
-			<artifactId>xmlbeans</artifactId>
-			<version>2.4.0</version>
-		</dependency> -->
-		
-		<!-- dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.2</version>
-		</dependency> -->
-		
-		<!-- dependency>
-			<groupId>io.reactivex</groupId>
-			<artifactId>rxjava</artifactId>
-			<version>1.1.0</version>
-		</dependency -->
-		
-		<!--  dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.2</version>
-		</dependency>  -->
-		
-		<!-- dependency>
-			<groupId>org.jvnet.ogc</groupId>
-			<artifactId>ogc-tools-gml-jts</artifactId>
-			<version> 1.0.2</version>
-		</dependency> -->
 				
 	</dependencies>
 </project>
